[gd_scene load_steps=12 format=4 uid="uid://j83qsn00lc22"]

[ext_resource type="Theme" uid="uid://5evnrjqdgbht" path="res://ui/ui_theme.tres" id="1_1q2rf"]
[ext_resource type="Script" path="res://graveyard/root_main.gd" id="2_6linr"]
[ext_resource type="TileSet" uid="uid://wbj28mmnlryf" path="res://graveyard/tileset_mk_16_16_nature_tileset_godot.tres" id="3_cqbhx"]
[ext_resource type="Script" path="res://graveyard/CloudMovement.gd" id="4_p8g0w"]
[ext_resource type="AudioStream" uid="uid://c0qm7co2lsf6p" path="res://ui/main_menu/music/That Zen Moment.mp3" id="5_ige6b"]
[ext_resource type="Shader" path="res://graveyard/loading.gdshader" id="6_tw4ro"]

[sub_resource type="LabelSettings" id="LabelSettings_cysei"]
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_l15vj"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_xbwtf"]
line_spacing = 1.0
font_size = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mahcu"]
shader = ExtResource("6_tw4ro")
shader_parameter/first_color = Vector4(0.972, 0.451, 0.125, 1)
shader_parameter/second_color = Vector4(0.51, 0.392, 0.745, 1)
shader_parameter/third_color = Vector4(0.4, 0.22, 0.761, 1)
shader_parameter/fourth_color = Vector4(0.086, 0.557, 0.71, 1)
shader_parameter/position = 0.0
shader_parameter/size = 0.5
shader_parameter/angle = 0.0
shader_parameter/time_scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_utqs4"]
line_spacing = 0.0
font_size = 43
font_color = Color(1, 1, 1, 0)
outline_color = Color(1, 1, 1, 0)

[node name="CanvasLayerMainMenu" type="CanvasLayer"]

[node name="RootMain" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1q2rf")
script = ExtResource("2_6linr")

[node name="ConfirmQuitDialog" type="PopupMenu" parent="RootMain"]
initial_position = 1
size = Vector2i(480, 270)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="RootMain/ConfirmQuitDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="LabelQuitGame" type="Label" parent="RootMain/ConfirmQuitDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game?"
label_settings = SubResource("LabelSettings_cysei")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonYes" type="Button" parent="RootMain/ConfirmQuitDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Yes"

[node name="ButtonNo" type="Button" parent="RootMain/ConfirmQuitDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "No"

[node name="TML SKY" type="TileMapLayer" parent="RootMain"]
tile_map_data = PackedByteArray("AAAdAAoACgAQAA4AAAAAAPD/CgAQAA4AAAAAAPH/CgAQAA4AAAAAAPL/CgAQAA4AAAAAAPP/CgAQAA4AAAAAAPT/CgAQAA4AAAAAAPX/CgAQAA4AAAAAAPb/CgAQAA4AAAAAAPf/CgAQAA4AAAAAAPj/CgAQAA4AAAAAAPn/CgAQAA4AAAAAAPr/CgAQAA4AAAAAAPv/CgAQAA4AAAAAAPz/CgAQAA4AAAAAAP3/CgAQAA4AAAAAAP7/CgAQAA4AAAAAAP//CgAQAA4AAAAAAAAACgAQAA4AAAAAAAEACgAQAA4AAAAAAAIACgAQAA4AAAAAAAMACgAQAA4AAAAAAAQACgAQAA4AAAAAAAUACgAQAA4AAAAAAAYACgAQAA4AAAAAAAcACgAQAA4AAAAAAAgACgAQAA4AAAAAAAkACgAQAA4AAAAAAAoACgAQAA4AAAABAPD/CgAQAA4AAAABAPH/CgAQAA4AAAABAPL/CgAQAA4AAAABAPP/CgAQAA4AAAABAPT/CgAQAA4AAAABAPX/CgAQAA4AAAABAPb/CgAQAA4AAAABAPf/CgAQAA4AAAABAPj/CgAQAA4AAAABAPn/CgAQAA4AAAABAPr/CgAQAA4AAAABAPv/CgAQAA4AAAABAPz/CgAQAA4AAAABAP3/CgAQAA4AAAABAP7/CgAQAA4AAAABAP//CgAQAA4AAAABAAAACgAQAA4AAAABAAEACgAQAA4AAAABAAIACgAQAA4AAAABAAMACgAQAA4AAAABAAQACgAQAA4AAAABAAUACgAQAA4AAAABAAYACgAQAA4AAAABAAcACgAQAA4AAAABAAgACgAQAA4AAAABAAkACgAQAA4AAAABAAoACgAQAA4AAAACAPD/CgAQAA4AAAACAPH/CgAQAA4AAAACAPL/CgAQAA4AAAACAPP/CgAQAA4AAAACAPT/CgAQAA4AAAACAPX/CgAQAA4AAAACAPb/CgAQAA4AAAACAPf/CgAQAA4AAAACAPj/CgAQAA4AAAACAPn/CgAQAA4AAAACAPr/CgAQAA4AAAACAPv/CgAQAA4AAAACAPz/CgAQAA4AAAACAP3/CgAQAA4AAAACAP7/CgAQAA4AAAACAP//CgAQAA4AAAACAAAACgAQAA4AAAACAAEACgAQAA4AAAACAAIACgAQAA4AAAACAAMACgAQAA4AAAACAAQACgAQAA4AAAACAAUACgAQAA4AAAACAAYACgAQAA4AAAACAAcACgAQAA4AAAACAAgACgAQAA4AAAACAAkACgAQAA4AAAACAAoACgAQAA4AAAADAPD/CgAQAA4AAAADAPH/CgAQAA4AAAADAPL/CgAQAA4AAAADAPP/CgAQAA4AAAADAPT/CgAQAA4AAAADAPX/CgAQAA4AAAADAPb/CgAQAA4AAAADAPf/CgAQAA4AAAADAPj/CgAQAA4AAAADAPn/CgAQAA4AAAADAPr/CgAQAA4AAAADAPv/CgAQAA4AAAADAPz/CgAQAA4AAAADAP3/CgAQAA4AAAADAP7/CgAQAA4AAAADAP//CgAQAA4AAAADAAAACgAQAA4AAAADAAEACgAQAA4AAAADAAIACgAQAA4AAAADAAMACgAQAA4AAAADAAQACgAQAA4AAAADAAUACgAQAA4AAAADAAYACgAQAA4AAAADAAcACgAQAA4AAAADAAgACgAQAA4AAAADAAkACgAQAA4AAAADAAoACgAQAA4AAAAEAPD/CgAQAA4AAAAEAPH/CgAQAA4AAAAEAPL/CgAQAA4AAAAEAPP/CgAQAA4AAAAEAPT/CgAQAA4AAAAEAPX/CgAQAA4AAAAEAPb/CgAQAA4AAAAEAPf/CgAQAA4AAAAEAPj/CgAQAA4AAAAEAPn/CgAQAA4AAAAEAPr/CgAQAA4AAAAEAPv/CgAQAA4AAAAEAPz/CgAQAA4AAAAEAP3/CgAQAA4AAAAEAP7/CgAQAA4AAAAEAP//CgAQAA4AAAAEAAAACgAQAA4AAAAEAAEACgAQAA4AAAAEAAIACgAQAA4AAAAEAAMACgAQAA4AAAAEAAQACgAQAA4AAAAEAAUACgAQAA4AAAAEAAYACgAQAA4AAAAEAAcACgAQAA4AAAAEAAgACgAQAA4AAAAEAAkACgAQAA4AAAAEAAoACgAQAA4AAAAFAPD/CgAQAA4AAAAFAPH/CgAQAA4AAAAFAPL/CgAQAA4AAAAFAPP/CgAQAA4AAAAFAPT/CgAQAA4AAAAFAPX/CgAQAA4AAAAFAPb/CgAQAA4AAAAFAPf/CgAQAA4AAAAFAPj/CgAQAA4AAAAFAPn/CgAQAA4AAAAFAPr/CgAQAA4AAAAFAPv/CgAQAA4AAAAFAPz/CgAQAA4AAAAFAP3/CgAQAA4AAAAFAP7/CgAQAA4AAAAFAP//CgAQAA4AAAAFAAAACgAQAA4AAAAFAAEACgAQAA4AAAAFAAIACgAQAA4AAAAFAAMACgAQAA4AAAAFAAQACgAQAA4AAAAFAAUACgAQAA4AAAAFAAYACgAQAA4AAAAFAAcACgAQAA4AAAAFAAgACgAQAA4AAAAFAAkACgAQAA4AAAAFAAoACgAQAA4AAAAGAPD/CgAQAA4AAAAGAPH/CgAQAA4AAAAGAPL/CgAQAA4AAAAGAPP/CgAQAA4AAAAGAPT/CgAQAA4AAAAGAPX/CgAQAA4AAAAGAPb/CgAQAA4AAAAGAPf/CgAQAA4AAAAGAPj/CgAQAA4AAAAGAPn/CgAQAA4AAAAGAPr/CgAQAA4AAAAGAPv/CgAQAA4AAAAGAPz/CgAQAA4AAAAGAP3/CgAQAA4AAAAGAP7/CgAQAA4AAAAGAP//CgAQAA4AAAAGAAAACgAQAA4AAAAGAAEACgAQAA4AAAAGAAIACgAQAA4AAAAGAAMACgAQAA4AAAAGAAQACgAQAA4AAAAGAAUACgAQAA4AAAAGAAYACgAQAA4AAAAGAAcACgAQAA4AAAAGAAgACgAQAA4AAAAGAAkACgAQAA4AAAAGAAoACgAQAA4AAAAHAPD/CgAQAA4AAAAHAPH/CgAQAA4AAAAHAPL/CgAQAA4AAAAHAPP/CgAQAA4AAAAHAPT/CgAQAA4AAAAHAPX/CgAQAA4AAAAHAPb/CgAQAA4AAAAHAPf/CgAQAA4AAAAHAPj/CgAQAA4AAAAHAPn/CgAQAA4AAAAHAPr/CgAQAA4AAAAHAPv/CgAQAA4AAAAHAPz/CgAQAA4AAAAHAP3/CgAQAA4AAAAHAP7/CgAQAA4AAAAHAP//CgAQAA4AAAAHAAAACgAQAA4AAAAHAAEACgAQAA4AAAAHAAIACgAQAA4AAAAHAAMACgAQAA4AAAAHAAQACgAQAA4AAAAHAAUACgAQAA4AAAAHAAYACgAQAA4AAAAHAAcACgAQAA4AAAAHAAgACgAQAA4AAAAHAAkACgAQAA4AAAAHAAoACgAQAA4AAAAIAPD/CgAQAA4AAAAIAPH/CgAQAA4AAAAIAPL/CgAQAA4AAAAIAPP/CgAQAA4AAAAIAPT/CgAQAA4AAAAIAPX/CgAQAA4AAAAIAPb/CgAQAA4AAAAIAPf/CgAQAA4AAAAIAPj/CgAQAA4AAAAIAPn/CgAQAA4AAAAIAPr/CgAQAA4AAAAIAPv/CgAQAA4AAAAIAPz/CgAQAA4AAAAIAP3/CgAQAA4AAAAIAP7/CgAQAA4AAAAIAP//CgAQAA4AAAAIAAAACgAQAA4AAAAIAAEACgAQAA4AAAAIAAIACgAQAA4AAAAIAAMACgAQAA4AAAAIAAQACgAQAA4AAAAIAAUACgAQAA4AAAAIAAYACgAQAA4AAAAIAAcACgAQAA4AAAAIAAgACgAQAA4AAAAIAAkACgAQAA4AAAAIAAoACgAQAA4AAAAJAPD/CgAQAA4AAAAJAPH/CgAQAA4AAAAJAPL/CgAQAA4AAAAJAPP/CgAQAA4AAAAJAPT/CgAQAA4AAAAJAPX/CgAQAA4AAAAJAPb/CgAQAA4AAAAJAPf/CgAQAA4AAAAJAPj/CgAQAA4AAAAJAPn/CgAQAA4AAAAJAPr/CgAQAA4AAAAJAPv/CgAQAA4AAAAJAPz/CgAQAA4AAAAJAP3/CgAQAA4AAAAJAP7/CgAQAA4AAAAJAP//CgAQAA4AAAAJAAAACgAQAA4AAAAJAAEACgAQAA4AAAAJAAIACgAQAA4AAAAJAAMACgAQAA4AAAAJAAQACgAQAA4AAAAJAAUACgAQAA4AAAAJAAYACgAQAA4AAAAJAAcACgAQAA4AAAAJAAgACgAQAA4AAAAJAAkACgAQAA4AAAAJAAoACgAQAA4AAAAKAPD/CgAQAA4AAAAKAPH/CgAQAA4AAAAKAPL/CgAQAA4AAAAKAPP/CgAQAA4AAAAKAPT/CgAQAA4AAAAKAPX/CgAQAA4AAAAKAPb/CgAQAA4AAAAKAPf/CgAQAA4AAAAKAPj/CgAQAA4AAAAKAPn/CgAQAA4AAAAKAPr/CgAQAA4AAAAKAPv/CgAQAA4AAAAKAPz/CgAQAA4AAAAKAP3/CgAQAA4AAAAKAP7/CgAQAA4AAAAKAP//CgAQAA4AAAAKAAAACgAQAA4AAAAKAAEACgAQAA4AAAAKAAIACgAQAA4AAAAKAAMACgAQAA4AAAAKAAQACgAQAA4AAAAKAAUACgAQAA4AAAAKAAYACgAQAA4AAAAKAAcACgAQAA4AAAAKAAgACgAQAA4AAAAKAAkACgAQAA4AAAAKAAoACgAQAA4AAAALAPD/CgAQAA4AAAALAPH/CgAQAA4AAAALAPL/CgAQAA4AAAALAPP/CgAQAA4AAAALAPT/CgAQAA4AAAALAPX/CgAQAA4AAAALAPb/CgAQAA4AAAALAPf/CgAQAA4AAAALAPj/CgAQAA4AAAALAPn/CgAQAA4AAAALAPr/CgAQAA4AAAALAPv/CgAQAA4AAAALAPz/CgAQAA4AAAALAP3/CgAQAA4AAAALAP7/CgAQAA4AAAALAP//CgAQAA4AAAALAAAACgAQAA4AAAALAAEACgAQAA4AAAALAAIACgAQAA4AAAALAAMACgAQAA4AAAALAAQACgAQAA4AAAALAAUACgAQAA4AAAALAAYACgAQAA4AAAALAAcACgAQAA4AAAALAAgACgAQAA4AAAALAAkACgAQAA4AAAALAAoACgAQAA4AAAAMAPD/CgAQAA4AAAAMAPH/CgAQAA4AAAAMAPL/CgAQAA4AAAAMAPP/CgAQAA4AAAAMAPT/CgAQAA4AAAAMAPX/CgAQAA4AAAAMAPb/CgAQAA4AAAAMAPf/CgAQAA4AAAAMAPj/CgAQAA4AAAAMAPn/CgAQAA4AAAAMAPr/CgAQAA4AAAAMAPv/CgAQAA4AAAAMAPz/CgAQAA4AAAAMAP3/CgAQAA4AAAAMAP7/CgAQAA4AAAAMAP//CgAQAA4AAAAMAAAACgAQAA4AAAAMAAEACgAQAA4AAAAMAAIACgAQAA4AAAAMAAMACgAQAA4AAAAMAAQACgAQAA4AAAAMAAUACgAQAA4AAAAMAAYACgAQAA4AAAAMAAcACgAQAA4AAAAMAAgACgAQAA4AAAAMAAkACgAQAA4AAAAMAAoACgAQAA4AAAANAPD/CgAQAA4AAAANAPH/CgAQAA4AAAANAPL/CgAQAA4AAAANAPP/CgAQAA4AAAANAPT/CgAQAA4AAAANAPX/CgAQAA4AAAANAPb/CgAQAA4AAAANAPf/CgAQAA4AAAANAPj/CgAQAA4AAAANAPn/CgAQAA4AAAANAPr/CgAQAA4AAAANAPv/CgAQAA4AAAANAPz/CgAQAA4AAAANAP3/CgAQAA4AAAANAP7/CgAQAA4AAAANAP//CgAQAA4AAAANAAAACgAQAA4AAAANAAEACgAQAA4AAAANAAIACgAQAA4AAAANAAMACgAQAA4AAAANAAQACgAQAA4AAAANAAUACgAQAA4AAAANAAYACgAQAA4AAAANAAcACgAQAA4AAAANAAgACgAQAA4AAAANAAkACgAQAA4AAAANAAoACgAQAA4AAAAOAPD/CgAQAA4AAAAOAPH/CgAQAA4AAAAOAPL/CgAQAA4AAAAOAPP/CgAQAA4AAAAOAPT/CgAQAA4AAAAOAPX/CgAQAA4AAAAOAPb/CgAQAA4AAAAOAPf/CgAQAA4AAAAOAPj/CgAQAA4AAAAOAPn/CgAQAA4AAAAOAPr/CgAQAA4AAAAOAPv/CgAQAA4AAAAOAPz/CgAQAA4AAAAOAP3/CgAQAA4AAAAOAP7/CgAQAA4AAAAOAP//CgAQAA4AAAAOAAAACgAQAA4AAAAOAAEACgAQAA4AAAAOAAIACgAQAA4AAAAOAAMACgAQAA4AAAAOAAQACgAQAA4AAAAOAAUACgAQAA4AAAAOAAYACgAQAA4AAAAOAAcACgAQAA4AAAAOAAgACgAQAA4AAAAOAAkACgAQAA4AAAAOAAoACgAQAA4AAAAPAPD/CgAQAA4AAAAPAPH/CgAQAA4AAAAPAPL/CgAQAA4AAAAPAPP/CgAQAA4AAAAPAPT/CgAQAA4AAAAPAPX/CgAQAA4AAAAPAPb/CgAQAA4AAAAPAPf/CgAQAA4AAAAPAPj/CgAQAA4AAAAPAPn/CgAQAA4AAAAPAPr/CgAQAA4AAAAPAPv/CgAQAA4AAAAPAPz/CgAQAA4AAAAPAP3/CgAQAA4AAAAPAP7/CgAQAA4AAAAPAP//CgAQAA4AAAAPAAAACgAQAA4AAAAPAAEACgAQAA4AAAAPAAIACgAQAA4AAAAPAAMACgAQAA4AAAAPAAQACgAQAA4AAAAPAAUACgAQAA4AAAAPAAYACgAQAA4AAAAPAAcACgAQAA4AAAAPAAgACgAQAA4AAAAPAAkACgAQAA4AAAAPAAoACgAQAA4AAAAQAPD/CgAQAA4AAAAQAPH/CgAQAA4AAAAQAPL/CgAQAA4AAAAQAPP/CgAQAA4AAAAQAPT/CgAQAA4AAAAQAPX/CgAQAA4AAAAQAPb/CgAQAA4AAAAQAPf/CgAQAA4AAAAQAPj/CgAQAA4AAAAQAPn/CgAQAA4AAAAQAPr/CgAQAA4AAAAQAPv/CgAQAA4AAAAQAPz/CgAQAA4AAAAQAP3/CgAQAA4AAAAQAP7/CgAQAA4AAAAQAP//CgAQAA4AAAAQAAAACgAQAA4AAAAQAAEACgAQAA4AAAAQAAIACgAQAA4AAAAQAAMACgAQAA4AAAAQAAQACgAQAA4AAAAQAAUACgAQAA4AAAAQAAYACgAQAA4AAAAQAAcACgAQAA4AAAAQAAgACgAQAA4AAAAQAAkACgAQAA4AAAAQAAoACgAQAA4AAAARAPD/CgAQAA4AAAARAPH/CgAQAA4AAAARAPL/CgAQAA4AAAARAPP/CgAQAA4AAAARAPT/CgAQAA4AAAARAPX/CgAQAA4AAAARAPb/CgAQAA4AAAARAPf/CgAQAA4AAAARAPj/CgAQAA4AAAARAPn/CgAQAA4AAAARAPr/CgAQAA4AAAARAPv/CgAQAA4AAAARAPz/CgAQAA4AAAARAP3/CgAQAA4AAAARAP7/CgAQAA4AAAARAP//CgAQAA4AAAARAAAACgAQAA4AAAARAAEACgAQAA4AAAARAAIACgAQAA4AAAARAAMACgAQAA4AAAARAAQACgAQAA4AAAARAAUACgAQAA4AAAARAAYACgAQAA4AAAARAAcACgAQAA4AAAARAAgACgAQAA4AAAARAAkACgAQAA4AAAARAAoACgAQAA4AAAASAPD/CgAQAA4AAAASAPH/CgAQAA4AAAASAPL/CgAQAA4AAAASAPP/CgAQAA4AAAASAPT/CgAQAA4AAAASAPX/CgAQAA4AAAASAPb/CgAQAA4AAAASAPf/CgAQAA4AAAASAPj/CgAQAA4AAAASAPn/CgAQAA4AAAASAPr/CgAQAA4AAAASAPv/CgAQAA4AAAASAPz/CgAQAA4AAAASAP3/CgAQAA4AAAASAP7/CgAQAA4AAAASAP//CgAQAA4AAAASAAAACgAQAA4AAAASAAEACgAQAA4AAAASAAIACgAQAA4AAAASAAMACgAQAA4AAAASAAQACgAQAA4AAAASAAUACgAQAA4AAAASAAYACgAQAA4AAAASAAcACgAQAA4AAAASAAgACgAQAA4AAAASAAkACgAQAA4AAAASAAoACgAQAA4AAAATAPD/CgAQAA4AAAATAPH/CgAQAA4AAAATAPL/CgAQAA4AAAATAPP/CgAQAA4AAAATAPT/CgAQAA4AAAATAPX/CgAQAA4AAAATAPb/CgAQAA4AAAATAPf/CgAQAA4AAAATAPj/CgAQAA4AAAATAPn/CgAQAA4AAAATAPr/CgAQAA4AAAATAPv/CgAQAA4AAAATAPz/CgAQAA4AAAATAP3/CgAQAA4AAAATAP7/CgAQAA4AAAATAP//CgAQAA4AAAATAAAACgAQAA4AAAATAAEACgAQAA4AAAATAAIACgAQAA4AAAATAAMACgAQAA4AAAATAAQACgAQAA4AAAATAAUACgAQAA4AAAATAAYACgAQAA4AAAATAAcACgAQAA4AAAATAAgACgAQAA4AAAATAAkACgAQAA4AAAATAAoACgAQAA4AAAAUAPD/CgAQAA4AAAAUAPH/CgAQAA4AAAAUAPL/CgAQAA4AAAAUAPP/CgAQAA4AAAAUAPT/CgAQAA4AAAAUAPX/CgAQAA4AAAAUAPb/CgAQAA4AAAAUAPf/CgAQAA4AAAAUAPj/CgAQAA4AAAAUAPn/CgAQAA4AAAAUAPr/CgAQAA4AAAAUAPv/CgAQAA4AAAAUAPz/CgAQAA4AAAAUAP3/CgAQAA4AAAAUAP7/CgAQAA4AAAAUAP//CgAQAA4AAAAUAAAACgAQAA4AAAAUAAEACgAQAA4AAAAUAAIACgAQAA4AAAAUAAMACgAQAA4AAAAUAAQACgAQAA4AAAAUAAUACgAQAA4AAAAUAAYACgAQAA4AAAAUAAcACgAQAA4AAAAUAAgACgAQAA4AAAAUAAkACgAQAA4AAAAUAAoACgAQAA4AAAAVAPD/CgAQAA4AAAAVAPH/CgAQAA4AAAAVAPL/CgAQAA4AAAAVAPP/CgAQAA4AAAAVAPT/CgAQAA4AAAAVAPX/CgAQAA4AAAAVAPb/CgAQAA4AAAAVAPf/CgAQAA4AAAAVAPj/CgAQAA4AAAAVAPn/CgAQAA4AAAAVAPr/CgAQAA4AAAAVAPv/CgAQAA4AAAAVAPz/CgAQAA4AAAAVAP3/CgAQAA4AAAAVAP7/CgAQAA4AAAAVAP//CgAQAA4AAAAVAAAACgAQAA4AAAAVAAEACgAQAA4AAAAVAAIACgAQAA4AAAAVAAMACgAQAA4AAAAVAAQACgAQAA4AAAAVAAUACgAQAA4AAAAVAAYACgAQAA4AAAAVAAcACgAQAA4AAAAVAAgACgAQAA4AAAAVAAkACgAQAA4AAAAVAAoACgAQAA4AAAAWAPD/CgAQAA4AAAAWAPH/CgAQAA4AAAAWAPL/CgAQAA4AAAAWAPP/CgAQAA4AAAAWAPT/CgAQAA4AAAAWAPX/CgAQAA4AAAAWAPb/CgAQAA4AAAAWAPf/CgAQAA4AAAAWAPj/CgAQAA4AAAAWAPn/CgAQAA4AAAAWAPr/CgAQAA4AAAAWAPv/CgAQAA4AAAAWAPz/CgAQAA4AAAAWAP3/CgAQAA4AAAAWAP7/CgAQAA4AAAAWAP//CgAQAA4AAAAWAAAACgAQAA4AAAAWAAEACgAQAA4AAAAWAAIACgAQAA4AAAAWAAMACgAQAA4AAAAWAAQACgAQAA4AAAAWAAUACgAQAA4AAAAWAAYACgAQAA4AAAAWAAcACgAQAA4AAAAWAAgACgAQAA4AAAAWAAkACgAQAA4AAAAWAAoACgAQAA4AAAAXAPD/CgAQAA4AAAAXAPH/CgAQAA4AAAAXAPL/CgAQAA4AAAAXAPP/CgAQAA4AAAAXAPT/CgAQAA4AAAAXAPX/CgAQAA4AAAAXAPb/CgAQAA4AAAAXAPf/CgAQAA4AAAAXAPj/CgAQAA4AAAAXAPn/CgAQAA4AAAAXAPr/CgAQAA4AAAAXAPv/CgAQAA4AAAAXAPz/CgAQAA4AAAAXAP3/CgAQAA4AAAAXAP7/CgAQAA4AAAAXAP//CgAQAA4AAAAXAAAACgAQAA4AAAAXAAEACgAQAA4AAAAXAAIACgAQAA4AAAAXAAMACgAQAA4AAAAXAAQACgAQAA4AAAAXAAUACgAQAA4AAAAXAAYACgAQAA4AAAAXAAcACgAQAA4AAAAXAAgACgAQAA4AAAAXAAkACgAQAA4AAAAXAAoACgAQAA4AAAAYAPD/CgAQAA4AAAAYAPH/CgAQAA4AAAAYAPL/CgAQAA4AAAAYAPP/CgAQAA4AAAAYAPT/CgAQAA4AAAAYAPX/CgAQAA4AAAAYAPb/CgAQAA4AAAAYAPf/CgAQAA4AAAAYAPj/CgAQAA4AAAAYAPn/CgAQAA4AAAAYAPr/CgAQAA4AAAAYAPv/CgAQAA4AAAAYAPz/CgAQAA4AAAAYAP3/CgAQAA4AAAAYAP7/CgAQAA4AAAAYAP//CgAQAA4AAAAYAAAACgAQAA4AAAAYAAEACgAQAA4AAAAYAAIACgAQAA4AAAAYAAMACgAQAA4AAAAYAAQACgAQAA4AAAAYAAUACgAQAA4AAAAYAAYACgAQAA4AAAAYAAcACgAQAA4AAAAYAAgACgAQAA4AAAAYAAkACgAQAA4AAAAYAAoACgAQAA4AAAAZAPD/CgAQAA4AAAAZAPH/CgAQAA4AAAAZAPL/CgAQAA4AAAAZAPP/CgAQAA4AAAAZAPT/CgAQAA4AAAAZAPX/CgAQAA4AAAAZAPb/CgAQAA4AAAAZAPf/CgAQAA4AAAAZAPj/CgAQAA4AAAAZAPn/CgAQAA4AAAAZAPr/CgAQAA4AAAAZAPv/CgAQAA4AAAAZAPz/CgAQAA4AAAAZAP3/CgAQAA4AAAAZAP7/CgAQAA4AAAAZAP//CgAQAA4AAAAZAAAACgAQAA4AAAAZAAEACgAQAA4AAAAZAAIACgAQAA4AAAAZAAMACgAQAA4AAAAZAAQACgAQAA4AAAAZAAUACgAQAA4AAAAZAAYACgAQAA4AAAAZAAcACgAQAA4AAAAZAAgACgAQAA4AAAAZAAkACgAQAA4AAAAZAAoACgAQAA4AAAAaAPD/CgAQAA4AAAAaAPH/CgAQAA4AAAAaAPL/CgAQAA4AAAAaAPP/CgAQAA4AAAAaAPT/CgAQAA4AAAAaAPX/CgAQAA4AAAAaAPb/CgAQAA4AAAAaAPf/CgAQAA4AAAAaAPj/CgAQAA4AAAAaAPn/CgAQAA4AAAAaAPr/CgAQAA4AAAAaAPv/CgAQAA4AAAAaAPz/CgAQAA4AAAAaAP3/CgAQAA4AAAAaAP7/CgAQAA4AAAAaAP//CgAQAA4AAAAaAAAACgAQAA4AAAAaAAEACgAQAA4AAAAaAAIACgAQAA4AAAAaAAMACgAQAA4AAAAaAAQACgAQAA4AAAAaAAUACgAQAA4AAAAaAAYACgAQAA4AAAAaAAcACgAQAA4AAAAaAAgACgAQAA4AAAAaAAkACgAQAA4AAAAaAAoACgAQAA4AAAAbAPD/CgAQAA4AAAAbAPH/CgAQAA4AAAAbAPL/CgAQAA4AAAAbAPP/CgAQAA4AAAAbAPT/CgAQAA4AAAAbAPX/CgAQAA4AAAAbAPb/CgAQAA4AAAAbAPf/CgAQAA4AAAAbAPj/CgAQAA4AAAAbAPn/CgAQAA4AAAAbAPr/CgAQAA4AAAAbAPv/CgAQAA4AAAAbAPz/CgAQAA4AAAAbAP3/CgAQAA4AAAAbAP7/CgAQAA4AAAAbAP//CgAQAA4AAAAbAAAACgAQAA4AAAAbAAEACgAQAA4AAAAbAAIACgAQAA4AAAAbAAMACgAQAA4AAAAbAAQACgAQAA4AAAAbAAUACgAQAA4AAAAbAAYACgAQAA4AAAAbAAcACgAQAA4AAAAbAAgACgAQAA4AAAAbAAkACgAQAA4AAAAbAAoACgAQAA4AAAAcAPD/CgAQAA4AAAAcAPH/CgAQAA4AAAAcAPL/CgAQAA4AAAAcAPP/CgAQAA4AAAAcAPT/CgAQAA4AAAAcAPX/CgAQAA4AAAAcAPb/CgAQAA4AAAAcAPf/CgAQAA4AAAAcAPj/CgAQAA4AAAAcAPn/CgAQAA4AAAAcAPr/CgAQAA4AAAAcAPv/CgAQAA4AAAAcAPz/CgAQAA4AAAAcAP3/CgAQAA4AAAAcAP7/CgAQAA4AAAAcAP//CgAQAA4AAAAcAAAACgAQAA4AAAAcAAEACgAQAA4AAAAcAAIACgAQAA4AAAAcAAMACgAQAA4AAAAcAAQACgAQAA4AAAAcAAUACgAQAA4AAAAcAAYACgAQAA4AAAAcAAcACgAQAA4AAAAcAAgACgAQAA4AAAAcAAkACgAQAA4AAAAcAAoACgAQAA4AAAAdAPD/CgAQAA4AAAAdAPH/CgAQAA4AAAAdAPL/CgAQAA4AAAAdAPP/CgAQAA4AAAAdAPT/CgAQAA4AAAAdAPX/CgAQAA4AAAAdAPb/CgAQAA4AAAAdAPf/CgAQAA4AAAAdAPj/CgAQAA4AAAAdAPn/CgAQAA4AAAAdAPr/CgAQAA4AAAAdAPv/CgAQAA4AAAAdAPz/CgAQAA4AAAAdAP3/CgAQAA4AAAAdAP7/CgAQAA4AAAAdAP//CgAQAA4AAAAdAAAACgAQAA4AAAAdAAEACgAQAA4AAAAdAAIACgAQAA4AAAAdAAMACgAQAA4AAAAdAAQACgAQAA4AAAAdAAUACgAQAA4AAAAdAAYACgAQAA4AAAAdAAcACgAQAA4AAAAdAAgACgAQAA4AAAAdAAkACgAQAA4AAAAAAO//CgAQAA4AAAABAO//CgAQAA4AAAACAO//CgAQAA4AAAADAO//CgAQAA4AAAAEAO//CgAQAA4AAAAFAO//CgAQAA4AAAAGAO//CgAQAA4AAAAHAO//CgAQAA4AAAAIAO//CgAQAA4AAAAJAO//CgAQAA4AAAAKAO//CgAQAA4AAAALAO//CgAQAA4AAAAMAO//CgAQAA4AAAANAO//CgAQAA4AAAAOAO//CgAQAA4AAAAPAO//CgAQAA4AAAAQAO//CgAQAA4AAAARAO//CgAQAA4AAAASAO//CgAQAA4AAAATAO//CgAQAA4AAAAUAO//CgAQAA4AAAAVAO//CgAQAA4AAAAWAO//CgAQAA4AAAAXAO//CgAQAA4AAAAYAO//CgAQAA4AAAAZAO//CgAQAA4AAAAaAO//CgAQAA4AAAAbAO//CgAQAA4AAAAcAO//CgAQAA4AAAAdAO//CgAQAA4AAAA=")
tile_set = ExtResource("3_cqbhx")

[node name="TMLClouds" type="TileMapLayer" parent="RootMain"]
tile_map_data = PackedByteArray("AAAFAAMACgAsABQAAAAaAAYACgAsABYAAAAaAAEACgAsABgAAAAFAAYACgAsABgAAAATAAQACgAzABMAAAALAAAACgAzABcAAAAXAPT/CgAzABcAAAAFAPv/CgAsABgAAAAbAPv/CgAsABQAAAAIAPP/CgAzABcAAAAHAPf/CgAzABMAAAAZAPf/CgAzABcAAAA=")
tile_set = ExtResource("3_cqbhx")
collision_enabled = false
script = ExtResource("4_p8g0w")

[node name="TMLBushes" type="TileMapLayer" parent="RootMain"]
tile_map_data = PackedByteArray("AAACAAYACgAWAA4AAAAFAAkACgALABYAAAAcAAgACgASABQAAAA=")
tile_set = ExtResource("3_cqbhx")

[node name="MainMenu" type="Control" parent="RootMain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterBoxMainMenu" type="CenterContainer" parent="RootMain/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -110.0
offset_right = 212.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="VBoxMainMenu" type="VBoxContainer" parent="RootMain/MainMenu/CenterBoxMainMenu"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu"]
layout_mode = 2
text = "cat Rush"
label_settings = SubResource("LabelSettings_l15vj")

[node name="ButtonStart" type="Button" parent="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu"]
layout_mode = 2
text = "Start Game"

[node name="ButtonOptions" type="Button" parent="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu"]
layout_mode = 2
text = "Options"

[node name="ButtonExit" type="Button" parent="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu"]
stream = ExtResource("5_ige6b")
playback_type = 1

[node name="OptionsMenu" type="Control" parent="RootMain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -271.0
offset_bottom = -271.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterBoxOptions" type="CenterContainer" parent="RootMain/OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -157.0
offset_right = 160.0
offset_bottom = 74.9999
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="VBoxOptions" type="VBoxContainer" parent="RootMain/OptionsMenu/CenterBoxOptions"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="LabelOptions" type="Label" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2
text = "Options
"
horizontal_alignment = 1
uppercase = true

[node name="EmptyBox2" type="Label" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2
text = " "
label_settings = SubResource("LabelSettings_xbwtf")
horizontal_alignment = 1
uppercase = true

[node name="VBoxMaster" type="VBoxContainer" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2

[node name="TextMaster" type="RichTextLabel" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxMaster"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[center]Master"
fit_content = true
scroll_active = false

[node name="SliderMaster" type="HSlider" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxMaster"]
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="VBoxEffects" type="VBoxContainer" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2

[node name="TextEffects" type="RichTextLabel" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxEffects"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Effects"
fit_content = true
scroll_active = false

[node name="SliderEffects" type="HSlider" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxEffects"]
layout_mode = 2
value = 100.0

[node name="VBoxMusic" type="VBoxContainer" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2

[node name="TextMusic" type="RichTextLabel" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxMusic"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[center]Music:"
fit_content = true
scroll_active = false

[node name="SliderMusic" type="HSlider" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxMusic"]
layout_mode = 2
value = 100.0

[node name="EmptyBox" type="Label" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2
text = " "
horizontal_alignment = 1
uppercase = true

[node name="ButtonBack" type="Button" parent="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions"]
layout_mode = 2
text = "Back to Main Menu"

[node name="LoadingScreen" type="Control" parent="RootMain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 280.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterBoxMainMenu" type="CenterContainer" parent="RootMain/LoadingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxMainMenu" type="VBoxContainer" parent="RootMain/LoadingScreen/CenterBoxMainMenu"]
layout_mode = 2
alignment = 1

[node name="LabelTitle" type="Label" parent="RootMain/LoadingScreen/CenterBoxMainMenu/VBoxMainMenu"]
material = SubResource("ShaderMaterial_mahcu")
layout_mode = 2
text = "Loading..."
label_settings = SubResource("LabelSettings_utqs4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TMLGround" type="TileMapLayer" parent="RootMain"]
tile_map_data = PackedByteArray("AAABAAsACgAOAAYAAAACAAsACgAOAAYAAAADAAsACgAOAAYAAAAEAAsACgAOAAYAAAAFAAsACgAOAAYAAAAGAAsACgAOAAYAAAAHAAsACgAOAAAAAAAIAAsACgAOAAYAAAAJAAsACgAOAAAAAAAKAAsACgAOAAAAAAALAAsACgAOAAAAAAAQAAsACgAOAAAAAAARAAsACgAOAAAAAAASAAsACgAOAAAAAAATAAsACgAOAAAAAAAUAAsACgAOAAAAAAAVAAsACgAOAAAAAAAWAAsACgAOAAAAAAAXAAsACgAOAAAAAAAYAAsACgAOAAAAAAAZAAsACgAOAAAAAAAaAAsACgAOAAAAAAAbAAsACgAOAAAAAAAcAAsACgAOAAAAAAAdAAsACgAPAAAAAAAdABAACgAPAAcAAAAYAA4ACgAOAAcAAAADAA0ACgAOAAcAAAAJAA0ACgAOAAcAAAAFABAACgAOAAcAAAAZABAACgAOAAcAAAAcAA0ACgAOAAcAAAAFAA0ACgAOAAcAAAAVAA8ACgAOAAcAAAAVAAwACgAOAAcAAAABAAwACgAOAAEAAAAVAA0ACgAOAAcAAAAWAA0ACgAOAAcAAAAXAA0ACgAOAAcAAAAYAA0ACgAOAAcAAAAYAAwACgAOAAcAAAAXAAwACgAOAAcAAAAZAAwACgAOAAcAAAAaAA0ACgAOAAcAAAAaAAwACgAOAAcAAAAcAAwACgAOAAEAAAAdAAwACgAPAAcAAAAdAA0ACgAPAAcAAAAZAA8ACgAOAAcAAAALAA8ACgAOAAcAAAAMAA8ACgAOAAcAAAANAA8ACgAOAAcAAAAOAA8ACgAOAAcAAAAPAA8ACgAOAAcAAAAPAA0ACgAOAAcAAAAQAA0ACgAOAAcAAAARAA0ACgAOAAcAAAASAA0ACgAOAAcAAAATAA0ACgAOAAcAAAACAA8ACgAOAAcAAAADAA8ACgAOAAcAAAAEAA8ACgAOAAcAAAAFAA8ACgAOAAcAAAAGAA8ACgAOAAcAAAAGAAwACgAOAAcAAAAHAAwACgAOAAcAAAAIAAwACgAOAAcAAAAJAAwACgAOAAcAAAAKAAwACgAOAAcAAAAPABAACgAOAAcAAAAQABAACgAOAAcAAAARABAACgAOAAcAAAASABAACgAOAAcAAAATABAACgAOAAcAAAAAAA4ACgANAAcAAAABAA4ACgAOAAcAAAACAA4ACgAOAAcAAAADAA4ACgAOAAcAAAAEAA4ACgAOAAcAAAAHABAACgAOAAcAAAAIABAACgAOAAcAAAAJABAACgAOAAcAAAAKABAACgAOAAcAAAALABAACgAOAAcAAAAUABAACgAOAAcAAAAVABAACgAOAAcAAAAWABAACgAOAAcAAAAXABAACgAOAAcAAAAYABAACgAOAAcAAAAZAA4ACgAOAAcAAAAaAA4ACgAOAAcAAAAbAA4ACgAOAAcAAAAcAA4ACgAOAAEAAAAdAA4ACgAPAAcAAAAUAA0ACgAOAAcAAAAKAA4ACgAOAAcAAAALAA4ACgAOAAcAAAAMAA4ACgAOAAcAAAANAA4ACgAOAAcAAAAOAA4ACgAOAAcAAAASAA4ACgAOAAcAAAATAA4ACgAOAAcAAAAUAA4ACgAOAAcAAAAVAA4ACgAOAAcAAAAWAA4ACgAOAAcAAAAFAA4ACgAOAAcAAAAGAA4ACgAOAAcAAAAHAA4ACgAOAAcAAAAIAA4ACgAOAAcAAAAJAA4ACgAOAAcAAAAHAA8ACgAOAAcAAAAIAA8ACgAOAAcAAAAJAA8ACgAOAAcAAAAKAA8ACgAOAAcAAAAMABAACgAOAAcAAAANABAACgAOAAcAAAAOABAACgAOAAcAAAABABAACgAOAAEAAAACABAACgAOAAcAAAADABAACgAOAAcAAAAEABAACgAOAAcAAAALAA0ACgAOAAcAAAAMAA0ACgAOAAcAAAANAA0ACgAOAAcAAAAOAA0ACgAOAAcAAAAOAAwACgAOAAcAAAAPAAwACgAOAAcAAAAQAAwACgAOAAcAAAARAAwACgAOAAcAAAASAAwACgAOAAcAAAAPAA4ACgAOAAcAAAAQAA4ACgAOAAcAAAARAA4ACgAOAAcAAAAQAA8ACgAOAAcAAAARAA8ACgAOAAcAAAASAA8ACgAOAAcAAAATAA8ACgAOAAcAAAAUAA8ACgAOAAcAAAAXAA4ACgAOAAcAAAAWAA8ACgAOAAcAAAAXAA8ACgAOAAcAAAAZAA0ACgAOAAcAAAAYAA8ACgAOAAcAAAAaAA8ACgAOAAcAAAAbAA8ACgAOAAcAAAAdAA8ACgAPAAcAAAAaABAACgAOAAcAAAAbABAACgAOAAcAAAATAAwACgAOAAcAAAAUAAwACgAOAAcAAAAWAAwACgAOAAcAAAALAAwACgAOAAcAAAAMAAwACgAOAAcAAAANAAwACgAOAAcAAAAHAA0ACgAOAAcAAAAIAA0ACgAOAAcAAAAKAA0ACgAOAAcAAAACAAwACgAOAAcAAAADAAwACgAOAAcAAAAEAAwACgAOAAcAAAAFAAwACgAOAAcAAAAAAAwACgANAAcAAAABAA0ACgAOAAEAAAACAA0ACgAOAAcAAAAEAA0ACgAOAAcAAAAAAA0ACgANAAcAAAAGAA0ACgAOAAcAAAAGABAACgAOAAcAAAAAAA8ACgANAAcAAAABAA8ACgAOAAEAAAAcAA8ACgAOAAEAAAAcABAACgAOAAEAAAAPAAsACgAOAAYAAAAOAAsACgAOAAAAAAANAAsACgAOAAAAAAAAAAsACgANAAAAAAAbAAwACgAOAAcAAAAbAA0ACgAOAAcAAAAMAAsACgAOAAAAAAAAABAACgANAAcAAAA=")
tile_set = ExtResource("3_cqbhx")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true

[connection signal="pressed" from="RootMain/ConfirmQuitDialog/VBoxContainer/ButtonYes" to="RootMain" method="_on_button_yes_pressed"]
[connection signal="pressed" from="RootMain/ConfirmQuitDialog/VBoxContainer/ButtonNo" to="RootMain" method="_on_button_no_pressed"]
[connection signal="pressed" from="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu/ButtonOptions" to="RootMain" method="_on_button_options_pressed"]
[connection signal="pressed" from="RootMain/MainMenu/CenterBoxMainMenu/VBoxMainMenu/ButtonExit" to="RootMain" method="_on_button_exit_pressed"]
[connection signal="value_changed" from="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/VBoxMaster/SliderMaster" to="RootMain" method="_on_SliderMaster_value_changed"]
[connection signal="pressed" from="RootMain/OptionsMenu/CenterBoxOptions/VBoxOptions/ButtonBack" to="RootMain" method="_on_button_back_pressed"]
